# game_balance

./: Cargo.toml  README.md
examples/: idle.rs  idle_draft.rs
src/: lib.rs
src/genres/: idle.rs  mod.rs  sdk.rs
src/mechanics/: actions.rs  control.rs  ctx.py  econ.rs  energy.rs  fees.rs  mod.rs  stoch.rs  wr.rs
src/systems/: draft_choice.rs  mod.rs  offline_accumulation.rs  production_spend.rs  reset_prestige.rs  sdk.rs  upgrade_cost_curve.rs
tests/: core.rs
